force-app/main/default/objects/Opportunity/fields/A_B_Test_Log__c.field-meta.xml
<CustomField>
    <fullName>A_B_Test_Log__c</fullName>
    <description>Log for A/B testing.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>A/B Test Log</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>