force-app/main/default/objects/Opportunity/fields/Account_Owner_Role__c.field-meta.xml
<CustomField>
    <fullName>Account_Owner_Role__c</fullName>
    <formula>Account.Account_Owner_Role__c</formula>
    <label>Account Owner Role</label>
    <type>Text</type>
</CustomField>