force-app/main/default/objects/Opportunity/fields/Accounting_Firm_Id__c.field-meta.xml
<CustomField>
    <fullName>Accounting_Firm_Id__c</fullName>
    <description>Shows the Accounting Firm ID field from the reseller&apos;s account.</description>
    <formula>Account.ZP_Firm_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Accounting Firm Id</label>
    <type>Text</type>
</CustomField>