force-app/main/default/objects/Opportunity/fields/Active_WC_Policy__c.field-meta.xml
<CustomField>
    <fullName>Active_WC_Policy__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active WC Policy</label>
    <type>Checkbox</type>
</CustomField>