force-app/main/default/objects/Opportunity/fields/Add_Bank_Info_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Add_Bank_Info_Completed_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Add Bank Info Completed Date</label>
    <type>DateTime</type>
</CustomField>