force-app/main/default/objects/Opportunity/fields/add_bank_info_started_at__c.field-meta.xml
<CustomField>
    <fullName>add_bank_info_started_at__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>add bank info started at</label>
    <type>DateTime</type>
</CustomField>