force-app/main/default/objects/Opportunity/fields/Add_Employees_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Add_Employees_Completed_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Add Employees Completed Date</label>
    <type>DateTime</type>
</CustomField>