force-app/main/default/objects/Opportunity/fields/add_employees_started_at__c.field-meta.xml
<CustomField>
    <fullName>add_employees_started_at__c</fullName>
    <label>add employees started at</label>
    <type>DateTime</type>
</CustomField>