force-app/main/default/objects/Opportunity/fields/Add_Signatory_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Add_Signatory_Completed_Date__c</fullName>
    <label>Add Signatory Completed Date</label>
    <type>DateTime</type>
</CustomField>