force-app/main/default/objects/Opportunity/fields/Additional_Opportunity_Services__c.field-meta.xml
<CustomField>
    <fullName>Additional_Opportunity_Services__c</fullName>
    <description>Displays the Product Add Ons the customer has selected for this opportunity.</description>
    <inlineHelpText>Displays the Product Add Ons the customer has selected for this opportunity.</inlineHelpText>
    <label>Additional Opportunity Services</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Advanced Time-Off</fullName>
            </value>
            <value>
                <fullName>Advanced Time-Off 2</fullName>
            </value>
            <value>
                <fullName>Employer of Record</fullName>
            </value>
            <value>
                <fullName>HR Resources</fullName>
            </value>
            <value>
                <fullName>HR Resources 2</fullName>
            </value>
            <value>
                <fullName>International Contractor Service</fullName>
            </value>
            <value>
                <fullName>Next-Day Direct Deposit</fullName>
            </value>
            <value>
                <fullName>Next-Day Direct Deposit 2</fullName>
            </value>
            <value>
                <fullName>Performance</fullName>
            </value>
            <value>
                <fullName>Performance 2</fullName>
            </value>
            <value>
                <fullName>Priority Support</fullName>
            </value>
            <value>
                <fullName>Priority Support 2</fullName>
            </value>
            <value>
                <fullName>Priority Support and HR Services</fullName>
            </value>
            <value>
                <fullName>Time Tracking</fullName>
            </value>
            <value>
                <fullName>Time Tracking 2</fullName>
            </value>
            <value>
                <fullName>International Contractor Payment</fullName>
            </value>
            <value>
                <fullName>Time And Project Tracking</fullName>
            </value>
            <value>
                <fullName>HR Services</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>