force-app/main/default/objects/Opportunity/fields/Advising_LSI__c.field-meta.xml
<CustomField>
    <fullName>Advising_LSI__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field will be marked as TRUE manually on opportunities where the group is involved in an LSI. LSI reason will be tracked in a separate field.</description>
    <label>Advising LSI</label>
    <type>Checkbox</type>
</CustomField>