force-app/main/default/objects/Opportunity/fields/Already_hired_employees__c.field-meta.xml
<CustomField>
    <fullName>Already_hired_employees__c</fullName>
    <description>Populated with pre-onboarding survey data</description>
    <inlineHelpText>Populated with pre-onboarding survey data</inlineHelpText>
    <label>Already hired employees</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Have Not Asked</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>