force-app/main/default/objects/Opportunity/fields/Anchor_Pay_Date__c.field-meta.xml
<CustomField>
    <fullName>Anchor_Pay_Date__c</fullName>
    <description>Filled out by API with anchor pay date listed in panda</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Api
Anchor Pay Date in ZenPayroll App</inlineHelpText>
    <label>Anchor Pay Date</label>
    <type>Date</type>
</CustomField>