force-app/main/default/objects/Opportunity/fields/Answering_Survey_Start__c.field-meta.xml
<CustomField>
    <fullName>Answering_Survey_Start__c</fullName>
    <description>renewal_application</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Answering Survey Start</label>
    <type>DateTime</type>
</CustomField>