force-app/main/default/objects/Opportunity/fields/Application_Dismissal_Reason__c.field-meta.xml
<CustomField>
    <fullName>Application_Dismissal_Reason__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Application Dismissal Reason</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>