force-app/main/default/objects/Opportunity/fields/Application_Id__c.field-meta.xml
<CustomField>
    <fullName>Application_Id__c</fullName>
    <formula>SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(Source_ID__c,&quot;hawaiian_ice-renewal-&quot;, &quot;&quot;) ,&quot;hawaiian_ice-new_plans_application-&quot;, &quot;&quot;),&quot;hawaiian_ice-commuter_benefit-&quot;, &quot;&quot;),&quot;hawaiian_ice-benefit_change_application-&quot;,&quot;&quot;),&quot;hawaiian_ice-account_benefit_interest-&quot;,&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Application Id</label>
    <type>Text</type>
</CustomField>