force-app/main/default/objects/Opportunity/fields/Application_Started__c.field-meta.xml
<CustomField>
    <fullName>Application_Started__c</fullName>
    <description>The date that the related application was started in-app.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Application Started</label>
    <type>DateTime</type>
</CustomField>