force-app/main/default/objects/Opportunity/fields/Ardius_Company_ID__c.field-meta.xml
<CustomField>
    <fullName>Ardius_Company_ID__c</fullName>
    <externalId>true</externalId>
    <label>Ardius Company ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>