force-app/main/default/objects/Opportunity/fields/Async_Renewal__c.field-meta.xml
<CustomField>
    <fullName>Async_Renewal__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Are there mismatching renewal dates? (excluding LiDi)</description>
    <inlineHelpText>Api
Are there mismatching renewal dates? (excluding LiDi)</inlineHelpText>
    <label>Async Renewal</label>
    <type>Checkbox</type>
</CustomField>