force-app/main/default/objects/Opportunity/fields/Awaiting_Offerings_Start__c.field-meta.xml
<CustomField>
    <fullName>Awaiting_Offerings_Start__c</fullName>
    <description>renewal_application</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Awaiting Offerings Start</label>
    <type>DateTime</type>
</CustomField>