force-app/main/default/objects/Opportunity/fields/Benefit_Types__c.field-meta.xml
<CustomField>
    <fullName>Benefit_Types__c</fullName>
    <description>Stores the benefit types passed by the associated HI application record.</description>
    <formula>TRIM(
    IF(Medical_Renewal__c, &quot;Medical, &quot;, &quot;&quot;) &amp; 
    IF(Dental_Renewal__c, &quot;Dental, &quot;, &quot;&quot;) &amp; 
    IF(Vision_Renewal__c, &quot;Vision, &quot;, &quot;&quot;) &amp; 
    IF(Life_Renewal__c, &quot;Life, &quot;, &quot;&quot;) &amp; 
    IF(Long_Term_Disability_Renewal__c, &quot;LTD, &quot;, &quot;&quot;) &amp; 
    IF(Short_Term_Disability_Renewal__c, &quot;STD, &quot;, &quot;&quot;) &amp; 
    IF(FSA_Renewal__c, &quot;FSA, &quot;, &quot;&quot;) &amp; 
    IF(DCA_Renewal__c, &quot;DCA, &quot;, &quot;&quot;) &amp; 
    IF(HSA_Renewal__c, &quot;HSA, &quot;, &quot;&quot;)
)</formula>
    <label>Benefit Types</label>
    <type>Text</type>
</CustomField>