force-app/main/default/objects/Opportunity/fields/Benefits_Current_Setup_Step__c.field-meta.xml
<CustomField>
    <fullName>Benefits_Current_Setup_Step__c</fullName>
    <label>Benefits Current Setup Step</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Created</fullName>
            </value>
            <value>
                <fullName>Selecting Benefits</fullName>
            </value>
            <value>
                <fullName>Selecting Carriers</fullName>
            </value>
            <value>
                <fullName>Answering Additional Questions</fullName>
            </value>
            <value>
                <fullName>Signing Forms</fullName>
            </value>
            <value>
                <fullName>Forms Signed</fullName>
            </value>
            <value>
                <fullName>Selecting Employee Eligibility</fullName>
            </value>
            <value>
                <fullName>Receiving Medical Education</fullName>
            </value>
            <value>
                <fullName>Selecting Base Tier</fullName>
            </value>
            <value>
                <fullName>Selecting Base Plan</fullName>
            </value>
            <value>
                <fullName>Selecting Complementary Plans</fullName>
            </value>
            <value>
                <fullName>Selecting Non-Medical Plans</fullName>
            </value>
            <value>
                <fullName>Collecting Company Information</fullName>
            </value>
            <value>
                <fullName>Answering Survey</fullName>
            </value>
            <value>
                <fullName>Entering Flow</fullName>
            </value>
            <value>
                <fullName>ER Completed Survey</fullName>
            </value>
            <value>
                <fullName>Choosing Plans</fullName>
            </value>
            <value>
                <fullName>Confirming Plans</fullName>
            </value>
            <value>
                <fullName>Awaiting Offerings</fullName>
            </value>
            <value>
                <fullName>Awaiting Education</fullName>
            </value>
            <value>
                <fullName>Receiving Education</fullName>
            </value>
            <value>
                <fullName>Review Current Plans</fullName>
            </value>
            <value>
                <fullName>Selecting Offerings</fullName>
            </value>
            <value>
                <fullName>Reviewing Summary</fullName>
            </value>
            <value>
                <fullName>Verifying Eligibility</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Dismissed</fullName>
            </value>
            <value>
                <fullName>Blocked</fullName>
            </value>
            <value>
                <fullName>Deleted</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>