force-app/main/default/objects/Opportunity/fields/Benefits_Designer__c.field-meta.xml
<CustomField>
    <fullName>Benefits_Designer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Benefits Designer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities4</relationshipName>
    <type>Lookup</type>
</CustomField>