force-app/main/default/objects/Opportunity/fields/Benefits_Designer_Assignment_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Benefits_Designer_Assignment_Timestamp__c</fullName>
    <label>Benefits Designer Assignment Timestamp</label>
    <type>DateTime</type>
</CustomField>