force-app/main/default/objects/Opportunity/fields/Benefits_Notes__c.field-meta.xml
<CustomField>
    <fullName>Benefits_Notes__c</fullName>
    <description>Replicates Benefits Notes from account - to be used on LogSmartCallingPage.

This field and account field will be in sync based on new functionality.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Benefits Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>