force-app/main/default/objects/Opportunity/fields/Benefits_Opt_Out__c.field-meta.xml
<CustomField>
    <fullName>Benefits_Opt_Out__c</fullName>
    <description>Benefits Opt Out - reflects same field from Sold By Account.</description>
    <label>Benefits Opt Out</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Health Insurance</fullName>
            </value>
            <value>
                <fullName>401k</fullName>
            </value>
            <value>
                <fullName>Workers Comp</fullName>
            </value>
            <value>
                <fullName>P&amp;C Insurance</fullName>
            </value>
            <value>
                <fullName>CorpNet</fullName>
            </value>
            <value>
                <fullName>BD/Tech-Enabled Partners</fullName>
            </value>
            <value>
                <fullName>No Marketing</fullName>
            </value>
            <value>
                <fullName>R&amp;D Tax Credits</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>