force-app/main/default/objects/Opportunity/fields/Benefits_Setup_Steps_Completed__c.field-meta.xml
<CustomField>
    <fullName>Benefits_Setup_Steps_Completed__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Api</inlineHelpText>
    <label>Benefits Setup Steps Completed</label>
    <length>50</length>
    <type>Text</type>
</CustomField>