force-app/main/default/objects/Opportunity/fields/Blocked_Reason__c.field-meta.xml
<CustomField>
    <fullName>Blocked_Reason__c</fullName>
    <description>This field is populated by the app to salesforce integration</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Blocked Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>