force-app/main/default/objects/Opportunity/fields/BOR_Date__c.field-meta.xml
<CustomField>
    <fullName>BOR_Date__c</fullName>
    <description>BOR Date for Benefits BYB</description>
    <encryptionScheme>None</encryptionScheme>
    <label>BOR Date</label>
    <type>Date</type>
</CustomField>