force-app/main/default/objects/Opportunity/fields/BOR_Implementation_End_Date__c.field-meta.xml
<CustomField>
    <fullName>BOR_Implementation_End_Date__c</fullName>
    <description>This field populates the BOR Implementation End Date. This can be the date when BOR is complete or cancelled. If this is populated on CW Opp, that signifies BOR is complete</description>
    <label>BOR Implementation End Date</label>
    <type>Date</type>
</CustomField>