force-app/main/default/objects/Opportunity/fields/BYOB_Broker__c.field-meta.xml
<CustomField>
    <fullName>BYOB_Broker__c</fullName>
    <description>Brokers that BYB customers are using</description>
    <label>BYB Broker</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>360 Corporate Benefit Advisors (CBA)</fullName>
            </value>
            <value>
                <fullName>A.J. Kuzneski Jr., Inc. DBA Kuzneski Insurance Group</fullName>
            </value>
            <value>
                <fullName>About Health Insurance</fullName>
            </value>
            <value>
                <fullName>Abrams &amp; Associates</fullName>
            </value>
            <value>
                <fullName>Advanced Corporate Solutions LTD</fullName>
            </value>
            <value>
                <fullName>Advanced Insurance Designs, Inc.</fullName>
            </value>
            <value>
                <fullName>Aims Health Plan</fullName>
            </value>
            <value>
                <fullName>AllianceBenefits, LLC</fullName>
            </value>
            <value>
                <fullName>Alliant</fullName>
            </value>
            <value>
                <fullName>Allied Health Insurance Agency, LLC</fullName>
            </value>
            <value>
                <fullName>Amanda V Moore</fullName>
            </value>
            <value>
                <fullName>Arrow Benefits Group</fullName>
            </value>
            <value>
                <fullName>ASI Benefits</fullName>
            </value>
            <value>
                <fullName>Avalon Insurance Services, LLC</fullName>
            </value>
            <value>
                <fullName>Bateman, Gordon &amp; Sands, Inc.</fullName>
            </value>
            <value>
                <fullName>Bedrosian &amp; Associates</fullName>
            </value>
            <value>
                <fullName>Been Benefits</fullName>
            </value>
            <value>
                <fullName>BenefitEdge Insurance Services, Inc</fullName>
            </value>
            <value>
                <fullName>Bennie</fullName>
            </value>
            <value>
                <fullName>Bolton &amp; Company</fullName>
            </value>
            <value>
                <fullName>Brennan Consulting</fullName>
            </value>
            <value>
                <fullName>Brown &amp; Brown Insurance</fullName>
            </value>
            <value>
                <fullName>BSB Consultants</fullName>
            </value>
            <value>
                <fullName>Business Benefits Group</fullName>
            </value>
            <value>
                <fullName>Business Insurance &amp; Benefits Services of MA</fullName>
            </value>
            <value>
                <fullName>Caffrey Insurance Solutions, Inc.</fullName>
            </value>
            <value>
                <fullName>Cambridge Insurance Advisors</fullName>
            </value>
            <value>
                <fullName>CC Services, Inc</fullName>
            </value>
            <value>
                <fullName>CLG Employer Resources</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>