force-app/main/default/objects/Opportunity/fields/Close_Lost_EE_size__c.field-meta.xml
<CustomField>
    <fullName>Close_Lost_EE_size__c</fullName>
    <label>Close Lost EE size</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>