force-app/main/default/objects/Opportunity/fields/Close_Lost_Payment_Plan__c.field-meta.xml
<CustomField>
    <fullName>Close_Lost_Payment_Plan__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Close Lost Payment Plan</label>
    <length>100</length>
    <type>Text</type>
</CustomField>