force-app/main/default/objects/Opportunity/fields/Closed_Details__c.field-meta.xml
<CustomField>
    <fullName>Closed_Details__c</fullName>
    <inlineHelpText>Please provide additional context about the closed reasons for this opportunity</inlineHelpText>
    <label>Closed Details</label>
    <type>TextArea</type>
</CustomField>