force-app/main/default/objects/Opportunity/fields/Closed_Lost_Detail__c.field-meta.xml
<CustomField>
    <fullName>Closed_Lost_Detail__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Closed Lost Detail</label>
    <length>255</length>
    <type>Text</type>
</CustomField>