force-app/main/default/objects/Opportunity/fields/Closed_via_Automation__c.field-meta.xml
<CustomField>
    <fullName>Closed_via_Automation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Closed via Automation</label>
    <type>Checkbox</type>
</CustomField>