force-app/main/default/objects/Opportunity/fields/Closed_Won_Date__c.field-meta.xml
<CustomField>
    <fullName>Closed_Won_Date__c</fullName>
    <description>Captures the opportunity closed won date when the stage moves to closed Won.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Closed Won Date</label>
    <type>Date</type>
</CustomField>