force-app/main/default/objects/Opportunity/fields/Closed_Won_Eligible__c.field-meta.xml
<CustomField>
    <fullName>Closed_Won_Eligible__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Closed Won Eligible</label>
    <type>Checkbox</type>
</CustomField>