force-app/main/default/objects/Opportunity/fields/Collecting_Company_Information_End__c.field-meta.xml
<CustomField>
    <fullName>Collecting_Company_Information_End__c</fullName>
    <description>New plans timestamp: Collecting Company Information</description>
    <label>Collecting Company Information End</label>
    <type>DateTime</type>
</CustomField>