force-app/main/default/objects/Opportunity/fields/Collecting_Company_Information_Start__c.field-meta.xml
<CustomField>
    <fullName>Collecting_Company_Information_Start__c</fullName>
    <description>New plans timestamp: Collecting Company Information</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Collecting Company Information Start</label>
    <type>DateTime</type>
</CustomField>