force-app/main/default/objects/Opportunity/fields/Company_Employee_Pay_Types__c.field-meta.xml
<CustomField>
    <fullName>Company_Employee_Pay_Types__c</fullName>
    <description>Populated with pre-onboarding survey data</description>
    <inlineHelpText>Populated with pre-onboarding survey data</inlineHelpText>
    <label>Company Employee Pay Types</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>pay_myself</fullName>
                <label>Myself</label>
            </value>
            <value>
                <fullName>pay_employees</fullName>
                <label>Domestic Employees</label>
            </value>
            <value>
                <fullName>pay_international_employees</fullName>
                <label>International Employees</label>
            </value>
            <value>
                <fullName>pay_contractors</fullName>
                <label>Domestic Contractors</label>
            </value>
            <value>
                <fullName>pay_international_contractors</fullName>
                <label>International Contractors</label>
            </value>
            <value>
                <fullName>Have Not Asked</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>