force-app/main/default/objects/Opportunity/fields/Completed__c.field-meta.xml
<CustomField>
    <fullName>Completed__c</fullName>
    <description>new_plans_application
renewal_application</description>
    <label>NPR Completed</label>
    <type>DateTime</type>
</CustomField>