force-app/main/default/objects/Opportunity/fields/CPA__c.field-meta.xml
<CustomField>
    <fullName>CPA__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CPA</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (CPA)</relationshipLabel>
    <relationshipName>Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>