force-app/main/default/objects/Opportunity/fields/Create_User_Account_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Create_User_Account_Completed_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Create User Account Completed Date</label>
    <type>DateTime</type>
</CustomField>