force-app/main/default/objects/Opportunity/fields/Current_Dental_Insurer__c.field-meta.xml
<CustomField>
    <fullName>Current_Dental_Insurer__c</fullName>
    <label>Current Dental Insurer</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Delta</fullName>
            </value>
            <value>
                <fullName>Guardian</fullName>
            </value>
            <value>
                <fullName>Principal</fullName>
            </value>
            <value>
                <fullName>Safeguard</fullName>
            </value>
            <value>
                <fullName>Have Not Asked</fullName>
                <default>true</default>
                <label>Have Not Asked</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>