force-app/main/default/objects/Opportunity/fields/Current_payroll__c.field-meta.xml
<CustomField>
    <fullName>Current_payroll__c</fullName>
    <description>Populated with pre-onboarding survey data</description>
    <inlineHelpText>Populated with pre-onboarding survey data</inlineHelpText>
    <label>Current payroll</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>another_provider</fullName>
                <label>Another Provider</label>
            </value>
            <value>
                <fullName>ran_payroll_manually</fullName>
                <label>Do it ourselves</label>
            </value>
            <value>
                <fullName>Have Not Asked</fullName>
            </value>
            <value>
                <fullName>We&apos;re new to running payroll</fullName>
            </value>
            <value>
                <fullName>new</fullName>
                <label>New</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>