force-app/main/default/objects/Opportunity/fields/Current_Tier__c.field-meta.xml
<CustomField>
    <fullName>Current_Tier__c</fullName>
    <description>This is the Tier of the Company Account at the time of the Tier Upsell Opportunity Creation. This field, once populated, does not update after creation.</description>
    <inlineHelpText>This is the Tier of the Company Account at the time of the Tier Upsell Opportunity Creation. This field, once populated, does not update after creation.</inlineHelpText>
    <label>Current Tier</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Core</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Concierge</fullName>
            </value>
            <value>
                <fullName>Legacy Premium</fullName>
            </value>
            <value>
                <fullName>Premium CRB</fullName>
            </value>
            <value>
                <fullName>Premium Multi-EIN</fullName>
            </value>
            <value>
                <fullName>Contractor Only</fullName>
            </value>
            <value>
                <fullName>Simple</fullName>
            </value>
            <value>
                <fullName>Plus</fullName>
            </value>
            <value>
                <fullName>Premium</fullName>
            </value>
            <value>
                <fullName>contractor_only</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>