force-app/main/default/objects/Opportunity/fields/Currently_Offer_Health_Benefits__c.field-meta.xml
<CustomField>
    <fullName>Currently_Offer_Health_Benefits__c</fullName>
    <description>This field is used to capture answered BDO HI Questions</description>
    <label>Currently Offer Health Benefits</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>NOT_YET</fullName>
                <label>Not Yet</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>