force-app/main/default/objects/Opportunity/fields/DCA_Renewal__c.field-meta.xml
<CustomField>
    <fullName>DCA_Renewal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DCA Renewal</label>
    <type>Checkbox</type>
</CustomField>