force-app/main/default/objects/Opportunity/fields/Default_Generated__c.field-meta.xml
<CustomField>
    <fullName>Default_Generated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if the default package has been generated in-app.</description>
    <label>Default Benefit Offering Generated</label>
    <type>Checkbox</type>
</CustomField>