force-app/main/default/objects/Opportunity/fields/Dismissed__c.field-meta.xml
<CustomField>
    <fullName>Dismissed__c</fullName>
    <description>new_plans_application
renewal_application</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Dismissed</label>
    <type>DateTime</type>
</CustomField>