force-app/main/default/objects/Opportunity/fields/DM_Approval__c.field-meta.xml
<CustomField>
    <fullName>DM_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DM Approval</label>
    <type>Checkbox</type>
</CustomField>